edit product alignment solved

--- a/public/styles/user/home.css
+++ b/public/styles/user/home.css
@@ -6,7 +6,7 @@
             padding: 0 100px;
             position: relative;
             color: white;
-            overflow: hidden;
+            overflow-x: hidden;
             text-align: left;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
